# python-template

./: cookiecutter.json  pyproject.toml
.github/workflows/: test.yaml
tests/: test_bake.py
{{cookiecutter.repo_name}}/: README.md  pyproject.toml
{{cookiecutter.repo_name}}/.github/workflows/: release-please.yaml  test.yaml
