[project]
name = "python-template"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Sebastian Moßburger", email = "sebastian.markgraf@t-online.de"},
]
dependencies = []
requires-python = ">3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pytest-cookies>=0.7.0",
    "pre-commit>=3.7.0",
    "ruff>=0.4.3",
]
